Resolved gap in chatinterface

--- a/bot-admin-dashboard/src/components/ChatInterface.css
+++ b/bot-admin-dashboard/src/components/ChatInterface.css
@@ -5,7 +5,7 @@
   background-position: center; 
   background-repeat: no-repeat;
   flex-direction: column;
-  height: 90vh;
+  height: 80vh;
   margin: 0;
   z-index: 1;
   overflow: hidden;
@@ -26,7 +26,6 @@
 .content-wrapper {
   display: flex;
   flex-grow: 1;
-  padding: 1rem;
   gap: 1rem;
 }
 
@@ -58,24 +57,18 @@
   color:#0e6deb;
   display: flex;
   align-items: center;
-  margin-top: 0px;
-  margin-bottom: 0px;
   background-color: white;
   height: 80px;
   z-index: 10;
 }
 
 .chatbot-container {
-  flex: 2;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  margin-top: -15px;
-  margin-right: -16px;
-  margin-bottom: 15px;
   bottom: 0;
-  width: 700px;
-  height: 81.5vh; 
+  width: 650px;
+  height: 80vh; 
   background-color: #fcf9f9;
   box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1;
